--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "openai": "^6.16.0",
     "sqlite3": "^5.1.7"
